[[aves]] moved to [[Aves]]: uppercase <aves#173273>

--- a/wiki/Aves.wikitext
+++ b/wiki/Aves.wikitext
@@ -1,12 +1,1 @@
-==English==
-===Etymology===
-Latin ''avis'' bird
-===Proper noun===
-{{wikipedia}}
-'''Aves'''
-#a [[taxonomic]] [[class]], within [[subphylum]] [[Vertebrata]] - the [[bird]]s
-===Related terms===
-{{wikispecies}}
-*[[subclasses]]
-**[[Neognathae]]
-**[[Paleognathae]]
+#redirect [[Aves]]
