[[neognathae]] moved to [[Neognathae]]: uppercase <neognathae#173274>

--- a/wiki/Neognathae.wikitext
+++ b/wiki/Neognathae.wikitext
@@ -1,36 +1,1 @@
-==English==
-===Etymology===
-Greek ?
-===Proper noun===
-{{wikipedia}}
-'''Neognathae'''
-#a [[taxonomic]] [[subclass]], within [[class]] [[Aves]] - various [[bird]]s
-===Related terms===
-{{wikispecies}}
-*[[order]]s
-**[[Anseriformes]] ([[waterfowl]]
-**[[Galliformes]] ([[fowl]])
-**[[Sphenisciformes]] ([[penguin]]s)
-**[[Gaviiformes]] ([[loon]]s)
-**[[Podicipediformes]] ([[grebe]]s)
-**[[Procellariiformes]] ([[albatross]]es) etc)
-**[[Pelecaniformes]] ([[pelican]]s)
-**[[Ciconiiformes]] ([[stork]]s)
-**[[Accipitriformes]] ([[eagle]]s etc)
-**[[Falconoformes]] ([[falcon]]s)
-**[[Turniciformes]] ([[button quail]])
-**[[Gruiformes]] ([[crane]]s)
-**[[Charadriiformes]] ([[plover]]s)
-**[[Pterocliformes]] ([[sandgrouse]])
-**[[Columbiformes]] ([[dove]]s and [[pigeon]]s)
-**[[Psittaciformes]] ([[parrot]]s)
-**[[Cuculiformes]] ([[cuckoo]]s)
-**[[Strigiformes]] ([[owl]]s)
-**[[Caprimulgiformes]] ([[nightjar]]s)
-**[[Apodiformes]] ([[swift]]s)
-**[[Coraciiformes]] ([[kingfisher]]s)
-**[[Piciformes]] ([[woodpecker]]s)
-**[[Trogoniformes]] ([[trogon]]s)
-**[[Coliiformes]] ([[mousebird]]s)
-**[[Passeriformes]] ([[sparrow]]s)
-**[[Trochiliformes]] ([[hummingbird]]s)
+#redirect [[Neognathae]]
