/* Noun */ Etymology for Swedish "sky". <sky#1572>

--- a/wiki/sky.wikitext
+++ b/wiki/sky.wikitext
@@ -63,6 +63,6 @@ Middle English '''sky''' (cloud, heaven, sky) from Old Norse '''sky''' (cloud) <
 
 #(''countable'') [[heaven]]
 #(''countable'') [[sky#English|sky]]
-#(''uncountable'', ''cooking'') The 'fluid' which remains in a [[frying pan]] after the fried meat is ready.
+#(''uncountable'', ''cooking'') The 'fluid' which remains in a [[frying pan]] after the fried meat is ready.  From the French word [[jus]].
 [[Category:Old Norse derivations]]
 [[Category:1000 English basic words]]
