--- a/wiki/Ciconia.wikitext
+++ b/wiki/Ciconia.wikitext
@@ -1,19 +1,5 @@
-==English==
-===Etymology===
-{{L.}} ''ciconia'', stork
-===Proper noun===
-{{wikipedia}}
-'''Ciconia'''
-#a [[taxonomic]] [[genus]], within [[family]] [[Ciconiidae]] - the [[stork]]s
-===Related terms===
-{{wikispecies}}
-*[[species]]
-**[[Ciconia abdimii]] - Abdim's stork
-**[[Ciconia episcopus]] - Wooly-necked stork
-**[[Ciconia stormi]] - Storm's stork
-**[[Ciconia maguari]] - Maguari stork
-**[[Ciconia boyciana]] - Oriental white stork
-**[[Ciconia ciconia]] - [[White stork]]
-**[[Ciconia nigra]] - Black stork
-===See also===
-*[[ciconia]]
+==Latin==
+===Noun===
+'''ciconia''' (''f'', plural ''ciconiae'')
+# [[stork]]
+# a [[derisive]] [[gesture]] made with the [[finger]]s
