--- a/wiki/Ciconia.wikitext
+++ b/wiki/Ciconia.wikitext
@@ -3,3 +3,5 @@
 '''ciconia''' (''f'', plural ''ciconiae'')
 # [[stork]]
 # a [[derisive]] [[gesture]] made with the [[finger]]s
+===See also===
+*[[Ciconia]]
