--- a/wiki/turkey.wikitext
+++ b/wiki/turkey.wikitext
@@ -1,1 +1,156 @@
-#redirect [[turkey]]
+{{wikipedia}}
+==English==
+=== Pronunciation ===
+*[[w:AHD|AHD]]: tûr'kē
+*[[w:IPA|IPA]]: /ˈtʌɽkɪj/
+
+=== Noun ===
+'''turkey''' (''plural'' '''turkeys''')
+
+#Either of two species of [[bird]] in the family ''Meleagrididae'' with fan-shaped [[tail]]s and wattled [[neck]]s.
+#(''colloquial'') A failure.  
+#:''That film was a turkey.''
+#(''slang, usually derogatory'') A stupid or incompetent person.
+#:''The turkey cut in front of me and then berated me for running into him.''
+
+====Scientific name====
+''Meleagris gallopavo'', ''M. ocellata''
+
+:Photo of turkeys, the birds:
+[[Image:turkeys_1.jpg|Photo of a turkey]]
+
+==== Synonyms ====
+*(''failure''): [[flop]]
+*(''stupid person''): [[fool]], [[idiot]], [[jerk]] (''US''), [[plonker]] (''UK''), [[prat]] (''UK'')
+
+====Derived terms====
+*[[cold turkey]]
+*[[go full turkey]]
+*[[turkey vulture]]
+
+==== Translations ====
+
+'''bird'''
+{| border=0  width=100%
+|-
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--Put translations for languages from A to I here-->
+*Albanian: [[gjeli i detit]]
+*Arabic: [[ديك هندي]], [[ديك رومي]], [[ديك الحبش]]
+*[[Azari]]: [[hindishga]]
+*[[Basque]]: [[indioilar]], [[indioilo]]
+*Belarusian: [[дзікая індычка]]
+*[[Bosnian]]: [[ćurka]] ''f'', [[purica]] ''f''
+*Breton: [[yar-Indez]] ''f''  yer-Indez ''plural'', [[kilhog-Indez]] ''m''  kilheien-Indez ''plural''
+*Bulgarian: [[пуйка]] ''f''
+*Catalan: [[gall dindi]], [[polla d’índia (paó)]]
+*Chinese: [[火鸡]] (huǒjī)
+*Chinese pinyin: [[huoji]], [[huo3ji1]]
+*Croatian: [[puran]]
+*Czech: [[krocan]] ''m'', [[krůta]] ''f''
+*Danish: [[kalkun]]
+*Dutch: [[kalkoen]] ''f''
+*Esperanto: [[meleagro]]
+*Estonian: [[kalkun]]
+*Faroese: [[kalkun]]
+*Finnish: [[kalkkuna]]
+*French: [[dinde]] ''f'', [[dindon]] ''m''
+*Frisian: [[kalkoen]]
+*Friulian: [[dindi]], [[dindiat]]
+*Gallegan: [[pavo]]
+*German: [[Truthahn]] ''m'', [[Truthenne]] ''f''; [[Puter]] ''m'', [[Pute#German|Pute]] ''f''
+*Greek: [[γαλοπούλα]], [[διάνος]], [[κούρκος]]
+*Hebrew: (tarnegol hodu)
+*Hungarian: [[pulyka]]
+*Icelandic: [[kalkún]]
+*Indonesian: [[kalkun]], [[ayam kalkun]], [[ajam belanda]]
+*Irish: [[turcaí]]
+*Italian: [[tacchino]] ''m''
+|}
+| width=1% |
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--Put translations for languages from J to Z here-->
+*Japanese: [[七面鳥]] ([[しちめんちょう]], shichimenchō)
+*Ladin: [[tachin]]<!--do not put scientific name under Latin-->
+*Latvian: [[tītars]]
+*Lithuanian: [[kalakutas]]
+*[[Lower Sorbian]]: [[truta]], [[trutawa]], [[turk#Lower_Sorbian|turk]]
+*Macedonian: [[мисир]] , (misir) ''m'', [[мисирка]] ([[misirka]]) ''f''
+*[[Malay]]: [[ayam]] [[Belanda]]
+*Maltese: [[dundjan]]
+*Norwegian: [[kalkun]]
+*[[Occitan]]: [[piòt]]
+*Persian: (bugalamun)
+*Polish: [[indyk]] '' ''
+*Portuguese: [[peru]]
+*Romanian: [[curcan]] ''m'', [[curc&#259]] ''f''<!--this belongs under the Romanian entry: [[curcani]] ''m plural'', [[curci]] ''f plural''-->
+*Romansh: [[galdin]]
+*Romany: [[tudkano]] ''m'', [[tudka]] ''f''
+*Russian: [[дикая индейка]] ([[dikaja indejka]])
+*Sami: [[kálkon]]
+*Sardinian: [[dindu]], [[caboni de ěndias]], [[pudda d’ěndia]]
+*Scottish: [[pulaidh]]
+*Serbian: [[ћуран]] ([[ćuran]])
+*Slovak: [[moriak]] ''m'', [[morka]] ''f''
+*Slovenian: [[puran]] ''m'', [[pura#Slovenian|pura]] ''f''
+*Spanish: [[pavo]] ''m''; (''Mexican'') [[guajolote]] ''m''
+*Swahili: [[bata mzinga]]
+*Swedish: [[kalkon]]
+*Thai: [[ไก่งวง]] (Kai Nguang)
+*Turkish: [[hindi]]
+*Ukrainian: [[індик]] ([[indik]])
+*Upper Sorbian: [[truta]], [[trutak]]
+*Welsh: [[twrci]]
+*Yiddish: [[indik]]
+|}
+|}
+
+'''failure'''
+{| border=0  width=100%
+|-
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--Put translations for languages from A to I here-->
+*French: (''movie'') [[navet]] ''m''
+|}
+| width=1% |
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--Put translations for languages from J to Z here-->
+|}
+|}
+
+'''stupid person'''
+{| border=0  width=100%
+|-
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--Put translations for languages from A to I here-->
+*French: (''woman'') [[dinde]] ''f''
+|}
+| width=1% |
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--Put translations for languages from J to Z here-->
+|}
+|}
+
+=====Translations to be checked=====
+<!--Remove this section once all of the translations below have been moved into the tables above.-->
+
+The translations below need to be checked by native speakers and inserted into the appropriate table(s) above.  The numbering is not necessarily reliable.
+
+*Bulgarian: [[провал]] ''n'' (2), [[глупак]] ''m'' (3)
+
+=== See also ===
+*[[w:Turkey|Wikipedia article on Turkey]]
+*[[w:Turkey_(bird)|Wikipedia article on turkeys, the birds]]
+
+[[Category:Birds]]
+[[Category:Countries]]
+
+[[nl:turkey]]
+[[nl:Turkey]]
+[[Category:Turkish derivations]]
