--- a/wiki/aquila.wikitext
+++ b/wiki/aquila.wikitext
@@ -1,1 +1,45 @@
-#redirect [[aquila]]
+==English==
+===Proper noun===
+'''Aquila'''
+# see [[Aquila]]
+
+----
+
+==Italian==
+===Noun===
+'''aquila''' ''f''
+
+# [[eagle]]
+
+===Proper noun===
+L''''Aquila'''
+
+# See [[L'Aquila]]
+
+----
+
+==Latin==
+===Noun===
+'''aquila, '''[[aquilae]]''' ''f''
+
+[[Wiktionary Appendix:Latin first declension|First declension]]
+
+# [[eagle]]
+
+===Derived Terms===
+*[[&aacute;guila]] ''f'', ''(Spanish)''
+*[[aquiline]]
+
+----
+
+==Romanica==
+[[Category:Romanica language]]
+===Noun===
+'''aquila''' ''f''
+
+# [[eagle]]
+
+[[gl:Aquila]]
+[[it:aquila]]
+[[nl:Aquila]]
+[[pl:Aquila]]
