uppercase version <Aquila#112085>

--- a/wiki/aquila.wikitext
+++ b/wiki/aquila.wikitext
@@ -1,45 +1,21 @@
 ==English==
+===Etymology===
+{{L.}} ''aquila'' eagle
 ===Proper noun===
+{{wikipedia}}
 '''Aquila'''
-# see [[Aquila]]
-
-----
-
-==Italian==
-===Noun===
-'''aquila''' ''f''
-
-# [[eagle]]
-
-===Proper noun===
-L''''Aquila'''
-
-# See [[L'Aquila]]
-
-----
-
-==Latin==
-===Noun===
-'''aquila, '''[[aquilae]]''' ''f''
-
-[[Wiktionary Appendix:Latin first declension|First declension]]
-
-# [[eagle]]
-
-===Derived Terms===
-*[[&aacute;guila]] ''f'', ''(Spanish)''
-*[[aquiline]]
-
-----
-
-==Romanica==
-[[Category:Romanica language]]
-===Noun===
-'''aquila''' ''f''
-
-# [[eagle]]
-
-[[gl:Aquila]]
-[[it:aquila]]
-[[nl:Aquila]]
-[[pl:Aquila]]
+#a [[taxonomic]] [[genus]], within [[subfamily]] [[Buteoninae]] - the [[eagle]]s
+===Related terms===
+{{wikispecies}}
+*[[species]]
+**[[Aquila adalberti]]
+**[[Aquila audax]]
+**[[Aquila chrysaetos]]
+**[[Aquila clanga]]
+**[[Aquila gurneyi]]
+**[[Aquila heliaca]]
+**[[Aquila nipalensis]]
+**[[Aquila pomarina]]
+**[[Aquila rapax]]
+**[[Aquila verreauxii]]
+**[[Aquila wahlbergi]]
