[[buteo]] moved to [[Buteo]]: uppercase <buteo#173286>

--- a/wiki/Buteo.wikitext
+++ b/wiki/Buteo.wikitext
@@ -1,40 +1,1 @@
-==English==
-===Etymology===
-Latin ?
-===Proper noun===
-{{wikipedia}}
-'''Buteo'''
-#a [[taxonomic]] [[genus]], within [[subfamily]] [[Buteoninae]] - [[buzzard]]s and [[hawk]]s
-===Related terms===
-{{wikispecies}}
-*[[species]]
-**[[Buteo albicaudatus]] - [[white-tailed hawk]]
-**[[Buteo albigula]] - [[white-throated hawk]]
-**[[Buteo albonotatus]] - [[zone-tailed hawk]]
-**[[Buteo archeri]] - [[Archer's buzzard]]
-**[[Buteo augur]] - [[augur buzzard]]
-**[[Buteo auguralis]] - [[red-necked buzzard]]
-**[[Buteo brachypterus]] - [[Madagascar buzzard]]
-**[[Buteo brachyurus]] - [[short-tailed hawk]]
-**[[Buteo buteo]] - [[common buzzard]]
-**[[Buteo galapagoensis]] - [[Galapagos hawk]]
-**[[Buteo hemilasius]] - [[upland buzzard]]
-**[[Buteo jamaicensis]] - [[red-tailed hawk]]
-**[[Buteo lagopus]] - [[rough-legged buzzard]]
-**[[Buteo leucorrhous]] - [[white-rumped hawk]]
-**[[Buteo lineatus]] - [[red-shouldered hawk]]
-**[[Buteo magnirostris]] - [[roadside hawk]]
-**[[Buteo oreophilus]] - [[mountain buzzard]]
-**[[Buteo platypterus]] - [[broad-winged hawk]]
-**[[Buteo poecilochrous]] - [[puna hawk]]
-**[[Buteo polyosoma]] - [[red-backed hawk]]
-**[[Buteo regalis]] - [[ferruginous hawk]]
-**[[Buteo ridgwayi]] - [[Ridgway's hawk]]
-**[[Buteo rufinus]] - [[long-legged buzzard]]
-**[[Buteo rufofuscus]] - [[jackal buzzard]]
-**[[Buteo solitarius]] - [[Hawaiin hawk]]
-**[[Buteo swainsoni]] - [[Swainson's hawk]]
-**[[Buteo ventralis]] - [[rufous-tailed hawk]]
-
-
-[[pl:Buteo]]
+#redirect [[Buteo]]
