uppercase version <Primates#148741>

--- a/wiki/primates.wikitext
+++ b/wiki/primates.wikitext
@@ -1,6 +1,14 @@
 ==English==
-===Noun===
-'''primates'''
-# [[plural]] of [[primate]]
+===Etymology===
+{{L.}} ''primus'' chief or first
+===Proper noun===
+{{wikipedia}}
+'''Primates
+#a [[taxonomic]] [[order]], within [[subclass]] [[Placentalia]] - the [[primate]]s
+===Related terms===
+{{wikispecies}}
+*[[suborder]]s
+**[[Strepsirrhini]] (with wet [[nose]]s)
+**[[Haplorhini]] (with dry noses)
 ===See also===
-*[[Primates]]
+*[[primates]]
