uppercase version <pongo#81738>

--- a/wiki/pongo.wikitext
+++ b/wiki/pongo.wikitext
@@ -1,1 +1,12 @@
-#redirect [[pongo]]
+==English==
+===Proper noun===
+'''Pongo'''
+#see [[Pongo]]
+
+----
+
+==Italian==
+===Verb form===
+'''pongo'''
+
+# ''first-person singular indicative present of [[porre]]''
