uppercase version <Pongo#148099>

--- a/wiki/pongo.wikitext
+++ b/wiki/pongo.wikitext
@@ -1,12 +1,12 @@
 ==English==
+===Etymology===
+Latin ?
 ===Proper noun===
+{{wikipedia}}
 '''Pongo'''
-#see [[Pongo]]
-
-----
-
-==Italian==
-===Verb form===
-'''pongo'''
-
-# ''first-person singular indicative present of [[porre]]''
+#a [[taxonomic]] [[genus]], within [[subfamily]] [[Ponginae]] - the [[orangutan]]s
+===Related terms===
+{{wikispecies}}
+*[[species]]
+**[[Pongo pygmaeus]] - [[Bornean orangutan]]
+**[[Pongo abelii]]
