lowercase version <gorilla#67830>

--- a/wiki/gorilla.wikitext
+++ b/wiki/gorilla.wikitext
@@ -1,1 +1,68 @@
-#redirect [[gorilla]]
+==English==
+{{wikipedia}}
+===Noun===
+'''gorilla'''
+
+# The largest of the [[ape]]s, native to the forests of central [[Africa]], and known for its trait of [[knuckle-walking]]
+
+===Translation===
+*'''Chinese''': [[大猩猩]]
+*'''French''': [[gorille]] ''m''
+*'''Italian''': gorilla ''m''
+*'''Japanese''': [[ゴリラ]]
+*{{no}}: [[gorilla]] ''m''
+*'''Turkish''': [[goril]]
+*{{sv}}: gorilla ''c''
+===See also===
+*[[Gorilla]]
+
+----
+
+==Italian==
+[[Category:it:Mammals]]
+
+===Noun===
+'''gorilla''' ''m'' (''plural'' gorilla)
+
+# gorilla
+
+==Swedish==
+===Noun===
+'''gorilla'''
+[[Category:Sv:Mammals]]
+
+# gorilla
+
+====Conjugations====
+{| border=1 cellspacing=0 
+| bgcolor=#FFFFF0 colspan=5 align=center | '''Common''' 
+|- 
+|- bgcolor=#FFFFF0 align=center 
+! rowspan=2 | 
+| colspan=2 width=105 | ''Singular'' 
+| colspan=2 | ''Plural'' 
+|- bgcolor=#FFFFF0 align=center 
+| width=105 | ''Indefinite'' 
+| width=105 | ''Definite'' 
+| width=105 | ''Indefinite'' 
+|  width=105 | ''Definite'' 
+|- align=center 
+| width=105 bgcolor=#FFFFF0 | ''Nominative'' 
+| [[gorilla]] 
+| [[gorillan]] 
+| [[gorillor]] 
+| [[gorillorna]] 
+|- align=center 
+| width=105 bgcolor=#FFFFF0 | ''Genitive'' 
+| [[gorillas]] 
+| [[gorillans]] 
+| [[gorillors]] 
+| [[gorillornas]] 
+|} 
+
+[[Category:Greek derivations]]
+[[Category:Mammals]]
+
+[[hu:Gorilla]]
+[[nl:gorilla]]
+[[fi:Gorilla]]
