ety, cat <lackadaisical#85354>

--- a/wiki/lackadaisical.wikitext
+++ b/wiki/lackadaisical.wikitext
@@ -1,9 +1,15 @@
 ==English==
+===Etymology===
+From the archaic interjection [[lackaday]], [[lackadaisy]].
+
 ===Pronunciation===
 *[[IPA]]: /ˌlækəˈdeizikəl/
 
 ===Adjective===
 '''lackadaisical'''
 # [[unenthusiastic]]; [[uninterested]]
+
 ====Translations====
 *German: [[gleichgültig]] (1), [[lustlos]] (1)
+
+[[Category:English adjectives]]
