undid redirect; fmt; n -> proper n <MI6#139193>

--- a/wiki/MI6.wikitext
+++ b/wiki/MI6.wikitext
@@ -1,1 +1,8 @@
-#redirect [[mI6]]
+==English==
+===Etymology===
+Originally an abbreviation for Military Intelligence, division six.
+
+===Proper noun===
+'''MI6'''
+
+#The overseas intelligence agency of the United Kingdom, whose primary function is to spy on foreign governments and terror groups located abroad.  Formally called the Secret Intelligence Service (SIS).
