--- a/wiki/homo.wikitext
+++ b/wiki/homo.wikitext
@@ -1,1 +1,84 @@
-#redirect [[homo]]
+==English==
+===Noun===
+'''homo''', plural '''[[homos]]'''
+# ''(derogatory slang)'' abbreviation for [[homosexual]]
+====Etymology====
+Greek '''[[homo-]]''', ''[[same]]'' +  Latin '''[[sexualis]]''',  '''[[sex]]'''.
+
+===See also===
+*[[Homo]]
+
+----
+==Dutch==
+===Noun===
+'''homo''' ''m''
+
+#[[homosexual]]
+
+----
+
+==Esperanto==
+===Noun===
+'''homo'''  (Plural: [[homoj]], Diminutive: [[hometo]])
+# a human being, [[person]]
+====Derived words====
+: [[homaro]] : humanity
+====See also====
+[[ReVo:hom|homo]]
+
+----
+
+==Finnish==
+
+===Noun===
+'''homo'''  
+#[[gay]] man
+#(''rarely'') any [[gay]] person
+
+====Synonyms====
+*(''gay man''): [[fägäri]] (''derogatory''), [[hinttari]] (''derogatory''), [[hintti]] (''derogatory''), [[homppeli]]
+
+====Derived terms====
+*[[homobaari]]
+*[[homomies]]
+
+--------
+
+==Ido==
+[[Category:Ido language]]
+===Noun===
+'''homo'''  (Plural: [[homi]]
+# a human being, [[person]]
+====Derived words====
+: [[homaro]] : humanity
+
+==Latin==
+===Noun===
+'''homo''' ''m'', genitive '''[[hominis]]''', plural '''[[homines]]'''
+
+# a human being, a [[man]] (in the sense of human being), [[person]]
+#:'''homo homini lupus''' ''man (behaves like) a wolf to a man''
+
+====Translations====
+<!-- Unlike the confusing English "man" with its double meaning of a human or a male, many languages have a direct translation of this word -->
+* Slovak: [[človek#Slovak|človek]] ''m''
+*[[Spanish]]: [[gente]], [[hombre]]
+
+===Derived words===
+*[[ad hominem]]
+*[[homunculus]]
+*[[humanitas]]
+*[[humanus]]
+*[[uomo]]
+*[[homme]]
+
+==Swedish==
+===Noun===
+'''homo''' ''c''
+#[[homosexual]]
+
+[[la:Homo]]
+[[ja:homo]]
+[[pl:Homo]]
+[[pt:Homo]]
+[[fi:Homo]]
