better def, cat <expressive#44031>

--- a/wiki/expressive.wikitext
+++ b/wiki/expressive.wikitext
@@ -1,11 +1,12 @@
 ==English==
 ===Adjective===
 '''expressive'''
-
-#able to [[express]]
+# Effectively conveying thought or feeling.
 
 ====Translations====
 *Finnish: [[ilmaiseva]]
 
 [[it:expressive]]
 [[pl:Expressive]]
+
+[[Category:English adjectives]]
