phony redirect; moved content back from "mI5"; n -> proper n; fmt <MI5#139192>

--- a/wiki/MI5.wikitext
+++ b/wiki/MI5.wikitext
@@ -1,1 +1,8 @@
-#redirect [[mI5]]
+==English==
+===Etymology===
+Originally an abbreviation for Military Intelligence, division five.
+
+===Proper noun===
+'''MI5'''
+
+#The domestic intelligence agency of the United Kingdom, which operates in secret and whose primary function is to spy on terrorist organizations and others viewed as a threat to British national security.
