added nl meaning <reden#85212>

--- a/wiki/reden.wikitext
+++ b/wiki/reden.wikitext
@@ -1,1 +1,21 @@
-#redirect [[reden]]
+==Dutch==
+===Pronunciation===
+{{IPA|[ˈʁeːdən]}}
+
+===Noun===
+'''reden''' '''f'' (plural: [[redenen]], diminutive: [[redentje]])
+
+#[[reason]], [[ground]]
+
+----
+
+==German==
+===Pronunciation===
+{{IPA|[ˈʁeːdn&#809;]}}
+
+===Verb===
+#to [[talk]]
+
+[[Category:German verbs]]
+
+[[de:reden]]
