corrected nl <maternal death#33493>

--- a/wiki/maternal_death.wikitext
+++ b/wiki/maternal_death.wikitext
@@ -1,23 +1,24 @@
 ==English==
 
 ===Noun Phrase===
-{{Wikipedia}}
 '''maternal death'''
 
 #[[Death]] of a woman in childbirth, especially during or after a live birth. Pregnancy death.
 
+{{Wikipedia}}
+
 ====Translations====
 
-*[[Chinese]] (simplified): [[怀孕死亡]] (huanyun siwang)
+*Chinese (simplified): [[怀孕死亡]] (huanyun siwang)
 *Chinese (traditional): [[懷孕死亡]]
-*[[Dutch]]: [[zwangerschaps dood]]
-*[[French]]: mort de grossesse
-*[[German]]: Schwangerschafttod 
-*[[Greek]]: [[θάνατος εγκυμοσύνης]] (thánatos egkymosýnēs)
-*[[Italian]]: morte di gravidanza 
-*[[Japanese]]: [[妊娠の死]] (ninshin no shi)
-*[[Korean]]: [[임신 죽음]]
-*[[Latin]]: mors gestationalis ''nominative singular'', mortis gestationalis ''genitive singular'', mortes gestationales ''nominative plural'', mortium gestationalium ''genitive plural''
-*[[Portuguese]]: morte da gravidez 
-*[[Russian]]: [[смерть стельности]] (smert stelnosti)
-*[[Spanish]]: muerte del embarazo
+*Dutch: [[zwangerschapsdood]]
+*French: [[mort de grossesse]]
+*German: [[Schwangerschafttod]]
+*Greek: [[θάνατος εγκυμοσύνης]] (thánatos egkymosýnēs)
+*Italian: [[morte di gravidanza]]
+*Japanese: [[妊娠の死]] (ninshin no shi)
+*Korean: [[임신 죽음]]
+*Latin: [[mors gestationalis]] ''nominative singular'', mortis gestationalis ''genitive singular'', mortes gestationales ''nominative plural'', mortium gestationalium ''genitive plural''
+*Portuguese: [[morte da gravidez]]
+*Russian: [[смерть стельности]] (smert stelnosti)
+*Spanish: [[muerte del embarazo]]
