/* Proper noun */ <Homo sapiens#81811>

--- a/wiki/Homo_sapiens.wikitext
+++ b/wiki/Homo_sapiens.wikitext
@@ -3,10 +3,11 @@
 Latin ''homo'' man + ''sapiens'' wise
 ===Proper noun===
 {{wikipedia}}
-'''[[Home]] [[sapiens]]'''
+'''[[Homo]] [[sapiens]]'''
 #a [[taxonomic]] [[species]], within [[genus]] [[Homo]] - [[mankind]]
 {{wikispecies}}
 [[Image:Human.png|thumb|Detail from Pioneer 11 spacecraft picture]]
+
 ===Derived terms===
 *[[Homo sapiens idaltu]]
 *[[Homo sapiens sapiens]]
