--- a/wiki/pan.wikitext
+++ b/wiki/pan.wikitext
@@ -1,1 +1,78 @@
-#redirect [[pan]]
+==English==
+===Etymology===
+{{substub}}
+
+===Pronunciation===
+/pæn/
+
+===Noun===
+'''pan''', plural '''[[pans]]'''
+
+# flat [[implement]] used for [[cooking]] in the [[oven]] and [[frying]] or [[boiling]] on top of the [[stove]].
+# [[Loaf]] of [[bread]].
+
+====Translations====
+*Finnish: [[pannu]]
+*French: [[poêle]]
+
+===Transitive verb===
+'''pan''', '''[[pans]]''', '''[[panning]]''', '''[[panned]]'''
+
+# [[disparage]], belittle, put down, minimize the importance of
+#: ''The critics really '''panned''' that movie.''
+
+===Etymology===
+From the Greek word meaning ''all''.
+
+===Intransitive verb===
+'''pan''', '''[[pans]]''', '''[[panning]]''', '''[[panned]]'''
+
+# To move a [[movie camera]] [[sideways]].
+
+===See also===
+*[[Pan]]
+
+----
+
+== Japanese ==
+=== {{Romaji}} ===
+'''pan'''
+
+# [[パン]] (''[[bread]]'')
+
+----
+
+==Malay==
+'''pan'''
+
+# [[grandmother]]
+
+----
+
+==Spanish==
+
+===Noun===
+
+'''Pan'''
+
+#[[Bread]]
+
+===Pronunciation===
+*IPA: /pan/
+*SAMPA: /pan/
+
+===Use===
+
+*Para mi [[desayuno]], [[tomar|tomo]] pan y [[leche]] - For my [[breakfast]], I have [[bread]] and [[milk]]
+
+===Related words===
+
+*[[tostada]] - [[Toast]]
+*[[vino]] - [[Wine]]
+
+
+[[hu:Pan]]
+[[pl:Pan]]
+[[fr:pan]]
+[[Category:English words with multiple etymologies]]
+[[Category:Greek derivations]]
