added some translations <diploma#76264>

--- a/wiki/diploma.wikitext
+++ b/wiki/diploma.wikitext
@@ -1,9 +1,19 @@
 ==English==
 ===Noun===
-{{wikipedia}}
 '''diploma'''
+
 #A [[document]] issued by an [[educational]] [[institution]] [[testify]]ing that the [[recipient]] has earned a [[degree]] or has [[successfully]] [[complete]]d a [[particular]] [[course]] of [[study]].
 [[Category:Greek derivations]]
 
+{{wikipedia}}
+
+====Translations====
+*Dutch: [[diploma]] ''n''
+*French: [[diplome]] ''m''
+*German: [[Diploma]] ''n''
+*Italian: [[diploma]]
+*Polish: [[diploma]]
+*Spanish: [[diploma]] ''m''
+
 [[it:diploma]]
-[[pl:Diploma]]
+[[pl:diploma]]
