lowercase version <carnivora#82737>

--- a/wiki/carnivora.wikitext
+++ b/wiki/carnivora.wikitext
@@ -1,1 +1,14 @@
-#redirect [[carnivora]]
+==English==
+===Proper noun===
+'''Carnivora'''
+# see [[Carnivora]]
+
+----
+
+==Latin==
+===Adjective===
+'''carnivora''' (''nominative'', ''vocative'' and ''ablative'' ''singular'' ''feminine'', and ''nominative'', ''vocative'' and ''accusative'' ''plural'' ''neuter'')
+#[[flesh]]-[[eating]]
+===Related terms===
+*[[carnivorus]]
+*[[carnivorum]]
