uppercase version <Carnivora#118113>

--- a/wiki/carnivora.wikitext
+++ b/wiki/carnivora.wikitext
@@ -1,14 +1,16 @@
 ==English==
+===Etymology===
+{{L.}} ''[[carnivorus]]'' meat-eating.  Neuter plural, agreeing with [[Animalia]].
+
 ===Proper noun===
+{{wikipedia}}
 '''Carnivora'''
-# see [[Carnivora]]
 
-----
+#a [[taxonomic]] [[order]], within [[subclass]] [[Placentalia]] - the [[carnivore]]s
 
-==Latin==
-===Adjective===
-'''carnivora''' (''nominative'', ''vocative'' and ''ablative'' ''singular'' ''feminine'', and ''nominative'', ''vocative'' and ''accusative'' ''plural'' ''neuter'')
-#[[flesh]]-[[eating]]
-===Related terms===
-*[[carnivorus]]
-*[[carnivorum]]
+===See also===
+*[[carnovora]]
+{{wikispecies|Carnivora}}
+*[[suborder]]s
+**[[Fissipedia]] - land carnivores
+**[[Pinnipedia]] - sea carnivores
