/* See also */ <Carnivora#118113>

--- a/wiki/carnivora.wikitext
+++ b/wiki/carnivora.wikitext
@@ -9,7 +9,7 @@
 #a [[taxonomic]] [[order]], within [[subclass]] [[Placentalia]] - the [[carnivore]]s
 
 ===See also===
-*[[carnovora]]
+*[[carnivora]]
 {{wikispecies|Carnivora}}
 *[[suborder]]s
 **[[Fissipedia]] - land carnivores
