add ==English==, wikify <dissentient#173322>

--- a/wiki/dissentient.wikitext
+++ b/wiki/dissentient.wikitext
@@ -1,1 +1,7 @@
-1. Someone who disagrees with the majority on many matters, especially religious ones.
+==English==
+===Noun===
+'''dissentient'''
+# a [[dissenter]]
+===Adjective===
+'''dissentient'''
+# [[dissenting]]
