added translations <quotient#50886>

--- a/wiki/quotient.wikitext
+++ b/wiki/quotient.wikitext
@@ -1,1 +1,16 @@
-#redirect [[quotient]]
+==English==
+===Noun===
+'''quotient''' (''plural'' '''quotients''')
+#The number resulting from the [[division]] of one number by another, and showing how often a less number is contained in a greater; thus, the quotient of twelve divided by four is three.
+#The result of any process [[inverse]] to [[multiplication]].
+
+====Translations====
+*Dutch: [[quotiënt]] ''n''
+*French: [[quotient]] ''m''
+*German: [[Quotient]] ''n''
+*Swedish: [[quotient]]
+
+[[de:Quotient]]
+[[fr:quotient]]
+[[nl:quotiënt]]
+[[sv:quotient]]
