--- a/wiki/Felis.wikitext
+++ b/wiki/Felis.wikitext
@@ -1,1 +1,43 @@
-#redirect [[Felis]]
+==English==
+===Etymology===
+Latin ''feles'' cat
+
+===Proper noun===
+{{wikipedia}}
+'''Felis'''
+
+#a [[taxonomic]] [[genus]], within [[subfamily]] [[Felinae]] - the small cats
+
+===Related terms===
+{{wikispecies}}
+*[[species]]
+**[[Felis aurata]]
+**[[Felis bieti]]
+**[[Felis caracal]]
+**[[Felis chaus]]
+**[[Felis concolor]]
+**([[Felis domesticus]])
+**[[Felis geoffroyi]]
+**[[Felis guigna]]
+**[[Felis jacobita]]
+**[[Felis lynx]]
+**[[Felis margarita]]
+**[[Felis marmorata]]
+**[[Felis nigripes]]
+**[[Felis pardalis]]
+**[[Felis pardina]]
+**[[Felis planiceps]]
+**[[Felis rufus]]
+**[[Felis serval]]
+**[[Felis silvestris]]
+**[[Felis silvestris catus]]
+**[[Felis silvestris libyca]]
+**[[Felis viverrinus]]
+**[[Felis wiedii]]
+**[[Felis yagouaroundi]]
+===See also===
+*[[felis]]
+[[category:cat]]
+
+
+[[pl:Felis]]
