--- a/wiki/Felis.wikitext
+++ b/wiki/Felis.wikitext
@@ -1,43 +1,15 @@
-==English==
-===Etymology===
-Latin ''feles'' cat
+==Latin==
+===Noun===
+'''felis''' ''m'', genitive '''felis'''
 
-===Proper noun===
-{{wikipedia}}
-'''Felis'''
+Third declension
 
-#a [[taxonomic]] [[genus]], within [[subfamily]] [[Felinae]] - the small cats
+# [[cat]] (genitive singular of [[feles]]
 
-===Related terms===
-{{wikispecies}}
-*[[species]]
-**[[Felis aurata]]
-**[[Felis bieti]]
-**[[Felis caracal]]
-**[[Felis chaus]]
-**[[Felis concolor]]
-**([[Felis domesticus]])
-**[[Felis geoffroyi]]
-**[[Felis guigna]]
-**[[Felis jacobita]]
-**[[Felis lynx]]
-**[[Felis margarita]]
-**[[Felis marmorata]]
-**[[Felis nigripes]]
-**[[Felis pardalis]]
-**[[Felis pardina]]
-**[[Felis planiceps]]
-**[[Felis rufus]]
-**[[Felis serval]]
-**[[Felis silvestris]]
-**[[Felis silvestris catus]]
-**[[Felis silvestris libyca]]
-**[[Felis viverrinus]]
-**[[Felis wiedii]]
-**[[Felis yagouaroundi]]
-===See also===
-*[[felis]]
-[[category:cat]]
+===Related Terms===
+*[[feline]]
+*[[felinus]], [[felina]], [[felinum]]
 
-
-[[pl:Felis]]
+===See Also===
+*[[cattus]]
+*[[Felis]]
