lowercase version <caracal#4816>

--- a/wiki/caracal.wikitext
+++ b/wiki/caracal.wikitext
@@ -1,1 +1,12 @@
-#redirect [[caracal]]
+==English==
+===Noun===
+#a type of mountain cat, of [[genus]] ''[[Caracal]]'', native to Southern Africa, Turkestan and India.
+
+===Translation===
+:*{{bg}}: [[каракал]]
+:*{{da}}: [[karakal]]
+:*{{de}}: [[Karakal]]
+:*{{nl}}: [[caracal]]
+:*{{pl}}: [[karakal]]
+
+[[nl:caracal]]
