uppercase version <Caracal#117995>

--- a/wiki/caracal.wikitext
+++ b/wiki/caracal.wikitext
@@ -1,12 +1,6 @@
 ==English==
-===Noun===
-#a type of mountain cat, of [[genus]] ''[[Caracal]]'', native to Southern Africa, Turkestan and India.
+===Proper noun===
+{{wikipedia}}
+'''Caracal'''
 
-===Translation===
-:*{{bg}}: [[каракал]]
-:*{{da}}: [[karakal]]
-:*{{de}}: [[Karakal]]
-:*{{nl}}: [[caracal]]
-:*{{pl}}: [[karakal]]
-
-[[nl:caracal]]
+#a [[taxonomic]] [[genus]], within [[subfamily]] [[Felinae]] - the [[caracal]]s
