silly me <quotient#50886>

--- a/wiki/quotient.wikitext
+++ b/wiki/quotient.wikitext
@@ -8,9 +8,7 @@
 *Dutch: [[quotiënt]] ''n''
 *French: [[quotient]] ''m''
 *German: [[Quotient]] ''n''
-*Swedish: [[quotient]]
 
-[[de:Quotient]]
 [[fr:quotient]]
-[[nl:quotiënt]]
+[[nl:quotient]]
 [[sv:quotient]]
