--- a/wiki/mute.wikitext
+++ b/wiki/mute.wikitext
@@ -1,1 +1,75 @@
-#redirect [[mute]]
+==English==
+===Adjective===
+'''mute''' (''no [[comparative]] or [[superlative]]'')
+
+# [[Silent]]; not making a sound.
+#(''of a person'') Not having the power of [[speech]].
+<!--this is "moot", and this not what it means in any case: # (of a point) one that doesn't mean anything or means very little.-->
+
+====Translations====
+
+'''silent, not making a sound'''
+{| border=0  width=100%
+|-
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+*Dutch: [[stil]]
+*Finnish: [[äänetön]], [[mykkä]]
+*French: [[muet]] ''m'', [[muette]] ''f''
+|}
+| width=1% |
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+*Swedish: [[tyst]]
+|}
+|}
+
+'''not having the power of speech'''
+{| border=0  width=100%
+|-
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+*Dutch: [[stom]]
+*Finnish: [[mykkä]]
+*Bulgarian: [[ням]] ''m'', [[нямa]] ''f'', [[нямo]] ''n''
+|}
+| width=1% |
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+*Slovene: [[nem]] ''m'', [[nema]] ''f'', [[nemo]] ''n''
+*Swedish: [[stum]]
+|}
+|}
+
+=====Translations to be checked=====
+
+The translations below need to be checked by native speakers and inserted into the appropriate tables above.
+
+*German: [[stumm]]
+
+===Noun===
+'''mute''' (''plural'' '''mutes''')
+
+#A person who does not have the power of [[speech]].
+#An acting part where no speaking is required.
+#In music, an object for dulling the sound of an instrument, especially brass.
+
+====Translations====
+*French: sourdine
+*German: [[Stumme]] ''m''
+*Bulgarian: [[глухоням]]
+*Spanish [[Silencio]]
+*Swedish: [[stum]] ''c'' (1), [[sordin]] ''c'' (3)
+
+===Transitive verb===
+'''to mute''', present participle '''[[muting]]''', past tense and past participle '''[[muted]]'''
+
+#To [[silence]], to make quiet.
+#To turn off the sound of.
+#:''Please mute the music while I make a call.''
+
+====Translations====
+*Swedish: [[tysta]] (1), [[stänga av]]
+*French: rendre silencieux, rendre muet
+
+[[it:mute]]
