--- a/wiki/9_to_5.wikitext
+++ b/wiki/9_to_5.wikitext
@@ -9,6 +9,8 @@
 
 It's interesting to note the extreme differences between the two "9 to 5" songs, even though they were recorded the same year. Parton's song is about female liberation (as is the movie), while Easton's song is about a woman who waits at home all day for her man to come home from work.
 
+A cover of that song was performed by [[Sweden|Swedish]] [[punk]] [[band]] [[Millencolin]] and featured on their [[album]] [[The Melancholy Collection]].
+
 [[Category:AFI 100 Songs]]
 [[Category:Number One singles]]
 [[Category:1980 films]]
