fmt; rfc; one def; definition needed for "in good cheer" example; more der <cheer#43631>

--- a/wiki/cheer.wikitext
+++ b/wiki/cheer.wikitext
@@ -1,20 +1,25 @@
-===Verb===
-'''to cheer''' ([[cheers]], [[cheered]], [[cheering]])
-
-====Related terms====
-*[[cheer on]]
-
+==English==
 ===Noun===
-'''cheer''' ([[countable]] and [[uncountable]]; plural: [[cheers]])
+'''cheer''' (''[[countable]] and [[uncountable]]; plural'' '''[[cheers]]''')
 
-<!-- some real defs needed -->
-#(''Countable'')
-#:''A cheer rose from the crowd''.
-#(''Uncountable'')
+#(''uncountable'')<!-- definition needed -->
 #:''They were all in good cheer''.
+#(''countable'') A [[cry]] of "[[hurrah]]", "[[hurray]]", "[[yeah]]", or some other word expressing [[joy]].
+#:''A cheer rose from the crowd''.
 
-===Related terms===
+===Intranstive verb===
+'''to cheer''' ('''[[cheers]]''', '''[[cheering]]''', '''[[cheered]]''')
+
+#To shout a cheer or cheers.
+#:''The crowd cheered in support of the athletes.''
+
+===Derived terms===
+*[[cheerful]]
+*[[cheer on]]
 *[[cheers]]
+*[[cheer up]]
 *[[cheery]]
+
+{{rfc}}
 
 [[it:cheer]]
