lowercase version <puma#76522>

--- a/wiki/puma.wikitext
+++ b/wiki/puma.wikitext
@@ -1,1 +1,11 @@
-#redirect [[puma]]
+==English==
+===Noun===
+{{wikipedia}}
+'''puma'''
+#The [[mountain lion]]
+===See also===
+*[[Puma]]
+[[Category:Quechuan derivations]]
+
+[[de:Puma]]
+[[gl:Puma]]
