--- a/wiki/puma.wikitext
+++ b/wiki/puma.wikitext
@@ -1,11 +1,6 @@
 ==English==
-===Noun===
 {{wikipedia}}
-'''puma'''
-#The [[mountain lion]]
-===See also===
-*[[Puma]]
-[[Category:Quechuan derivations]]
-
-[[de:Puma]]
-[[gl:Puma]]
+===Proper noun===
+'''Puma'''
+#The [[taxonomic]] [[genus]] within the [[subfamily]] [[Felinae]] that comprises the [[puma]]s
+{{wikispecies}}
