[[pantherinae]] moved to [[Pantherinae]]: uppercase <pantherinae#173393>

--- a/wiki/Pantherinae.wikitext
+++ b/wiki/Pantherinae.wikitext
@@ -1,14 +1,1 @@
-==English==
-===Etymology===
-Latin ''panthera'' leopard
-===Proper noun===
-{{wikipedia}}
-'''Pantherinae'''
-#a [[taxonomic]] [[subfamily]], within [[family]] [[Felidae]] - various [[big]] [[cat]]s
-===Related terms===
-{{wikispecies}}
-*[[genera]]
-**[[Neofelis]] ([[clouded leopard]])
-**[[Panthera]] ([[tiger]], [[lion]], [[leopard]] & [[jaguar]])
-**[[Pardofelis]] ([[marbled cat]])
-**[[Uncia]] ([[snow leopard]])
+#redirect [[Pantherinae]]
