moved proper n to "Mia"; +it entry <mia#76324>

--- a/wiki/MIA.wikitext
+++ b/wiki/MIA.wikitext
@@ -1,5 +1,16 @@
 ==English==
-===Proper noun===
-'''Mia'''
+===Noun===
+{{wikipedia}}
+'''mia'''
+#A [[game]] played with [[dice]].
+[[Category:Greek derivations]]
 
-#A female [[given name]].
+----
+==Italian==
+===Possessive adjective===
+'''la mia'''
+
+#''feminine of [[mio|il mio]]''
+
+[[ja:mia]]
+[[pl:Mia]]
