--- a/wiki/Uncia.wikitext
+++ b/wiki/Uncia.wikitext
@@ -1,11 +1,1 @@
-==English==
-===Etymology===
-Latin ?
-===Proper noun===
-{{wikipedia}}
-'''Uncia'''
-#a [[taxonomic]] [[genus]], within [[subfamily]] [[Pantherinae]] - the [[ounce]] or [[snow leopard]]
-===Related terms===
-{{wikispecies}}
-*[[species]]
-**[[Uncia uncia]] ([[snow leopard]])
+#redirect [[Uncia]]
