--- a/wiki/kiasu.wikitext
+++ b/wiki/kiasu.wikitext
@@ -11,7 +11,7 @@
 
 ===Translations===
 *Malay: [[ ... ]]
-*Chinese: related to [[怕输]]
+*Chinese: related to [[怕]][[输]]
 
 ===See also===
 *[[Kiasi]]
