/* Italian */ - fmt as for "mio" <tuo#56198>

--- a/wiki/tuo.wikitext
+++ b/wiki/tuo.wikitext
@@ -19,15 +19,27 @@ The case suffixes are regular and the stem is invariant. [[Abessive]], [[comitat
 ----
 
 ==Italian==
-===Adjective===
-'''tuo''' ''m'' (''f'' tua, ''m pl'' tuoi, ''f pl'' tue)
+===Possessive adjective===
+(''before the noun''): '''il tuo''' ''m'' (''f'' '''la tua''', ''m plural'' '''i tuoi''', ''f plural'' '''le tue''')<br>
+(''after the noun; also used before a noun denoting a close family member''): '''tuo''' ''m'' (''f'' '''tua''', ''m plural'' '''tuoi''', ''f plural'' '''tue''')
 
-# [[your]]
+#[[your]] (''informal form'')
+#:''i tuoi figli'' - your children<!--masculine plural example before noun-->
+#:''le tue macchine'' - your cars<!--feminine plural example before noun-->
+#:''casa tua'' - your house<!--feminine singular example after noun-->
+#:''tuo padre'' - your father<!--masculine singular example before close family member-->
 
-===Related terms===
-*[[tu#Italian|tu]]
+===Pronoun===
+'''il tuo''' ''m'' (''f'' '''la tua''', ''m plural'' '''i tuoi''', ''f plural'' '''le tue''')
+
+#[[your]]
+#:''Sono i tuoi'' - They are yours.
 
 ===See also===
-*[[Loro]]
+*[[loro]]
+*[[mio]]
+*[[nostro]]
+*[[suo]]
+*[[vostro]]
 
 [[fi:Tuo]]
