lowercase version <elephas#52211>

--- a/wiki/elephas.wikitext
+++ b/wiki/elephas.wikitext
@@ -1,1 +1,20 @@
-#redirect [[elephas]]
+==English==
+===Proper noun===
+'''Elephas'''
+#see [[Elephas]]
+
+----
+==Latin==
+[[Category:Latin mammals]]
+===Noun===
+'''elephās, [[Wiktionary Appendix:Latin third declension|elephantis]]''' ''m''
+
+# [[elephant]]
+#[[elephantiasis]]
+
+===Other Forms===
+*[[elephans]]
+*[[elephantus]]
+
+===Etymology===
+From Greek [[ἐλέφας]]
