uppercase version <Elephas#125527>

--- a/wiki/elephas.wikitext
+++ b/wiki/elephas.wikitext
@@ -1,20 +1,13 @@
 ==English==
-===Proper noun===
-'''Elephas'''
-#see [[Elephas]]
-
-----
-==Latin==
-[[Category:Latin mammals]]
-===Noun===
-'''elephās, [[Wiktionary Appendix:Latin third declension|elephantis]]''' ''m''
-
-# [[elephant]]
-#[[elephantiasis]]
-
-===Other Forms===
-*[[elephans]]
-*[[elephantus]]
-
 ===Etymology===
-From Greek [[ἐλέφας]]
+Greek
+===Proper noun===
+{{wikipedia}}
+'''Elephas'''
+#a [[taxonomic]] [[genus]], within [[family]] [[Elephantidae]] - the Asian elephant
+===Related terms===
+{{wikispecies}}
+*[[species]]
+**[[Elephas maximus]]
+===See also===
+*[[elephas]]
