[[quercus]] moved to [[Quercus]]: uppercase <quercus#173424>

--- a/wiki/Quercus.wikitext
+++ b/wiki/Quercus.wikitext
@@ -1,11 +1,1 @@
-==English==
-===Etymology===
-Latin ''quercus'' oak
-===Proper noun===
-{{wikipedia}}
-'''Quercus'''
-#a [[taxonomic]] [[genus]], within [[family]] [[Fagaceae]] - many species of [[oak]] [[tree]]
-===Related terms===
-{{wikispecies}}
-*[[species]]
-** to follow
+#redirect [[Quercus]]
