fmt as for "nostro" <vostro#94451>

--- a/wiki/vostro.wikitext
+++ b/wiki/vostro.wikitext
@@ -1,14 +1,31 @@
 ==Italian==
 ===Etymology===
-Latin ''[[vester]], vestra, vestrum''
+Latin ''[[vester]]'', ''vestra'', ''vestrum''
+
 ===Pronunciation===
 vòstro, /ˈvɔstro/, /<tt>"vOstro</tt>/
-===Personal adjective===
-'''vostro'''
 
-# (''posessive of [[voi]]'') [[your]]
+===Possessive adjective===
+===Possessive adjective===
+(''before the noun''): '''il nostro''' ''m'' (''f'' '''la nostra''', ''m plural'' '''i nostri''', ''f plural'' '''le nostre''')<br>
+(''after the noun; also used before a noun denoting a close family member''): '''nostro''' ''m'' (''f'' '''nostra''', ''m plural'' '''nostri''', ''f plural'' '''nostre''')
 
-===Personal pronoun===
-'''vostro'''
+#[[your]] (''plural and polite forms'')
 
-# [[yours]]
+#:''i vostri figli'' - your children<!--masculine plural example before noun-->
+#:''le vostre macchine'' - your cars<!--feminine plural example before noun-->
+#:''casa vostra'' - your house<!--feminine singular example after noun-->
+#:''vostro padre'' - your father<!--masculine singular example before close family member-->
+
+===Pronoun===
+'''il vostro''' ''m'' (''f'' '''la vostra''', ''m plural'' '''i vostri''', ''f plural'' '''le vostre''')
+
+#[[yours]]
+#:''Sono i vostri'' - They are yours.
+
+===See also===
+*[[loro]]
+*[[mio]]
+*[[nostro]]
+*[[suo]]
+*[[tuo]]
