--- a/wiki/suo.wikitext
+++ b/wiki/suo.wikitext
@@ -8,7 +8,7 @@
 #:''le sue macchine'' - his/her/its cars<!--feminine plural example before noun-->
 #:''casa sua'' - his/her/its house<!--feminine singular example after noun-->
 #:''suo padre'' - his/her/its father<!--masculine singular example before close family member-->
-#(''often capitalised'') [[your]] (''polite form'')
+#(''often capitalised'') [[your]] (''polite singular form'')
 #:''i Suoi figli'' - your children<!--masculine plural example before noun-->
 #:''le Sue macchine'' - your cars<!--feminine plural example before noun-->
 #:''casa Sua'' - your house<!--feminine singular example after noun-->
@@ -19,7 +19,7 @@
 
 #[[his]], [[hers]], [[its]] own.
 #:''Sono i suoi'' - They are his/hers/its own.
-#(''often capitalised'') [[your]] (''polite form'')
+#(''often capitalised'') [[your]] (''polite singular form'')
 #:''Sono i Suoi'' - They are yours.
 
 ===See also===
