lowercase version <fungi#65770>

--- a/wiki/fungi.wikitext
+++ b/wiki/fungi.wikitext
@@ -1,1 +1,12 @@
-#redirect [[fungi]]
+==English==
+===Proper noun===
+'''Fungi'''
+#see [[Fungi]]
+----
+==Latin==
+===Noun===
+'''fungi'''  (''genitive'' and ''locative'' ''singular'', ''nominative'' and ''vocative'' ''plural'')
+#[[Fungus]], [[mushroom]]
+===Verb===
+'''fungi'''  (''passive'')
+#to [[perform]] or [[execute]]
