fmt as for "mio" <loro#56148>

--- a/wiki/loro.wikitext
+++ b/wiki/loro.wikitext
@@ -2,17 +2,37 @@
 ===Pronoun===
 '''loro'''
 
-# [[they]]
-# [[them]]
+#[[they]]
+#[[them]], to them
+
+===Possessive adjective===
+(''before the noun''): '''il loro''' ''m'' (''f'' '''la loro''', ''m plural'' '''i loro''', ''f plural'' '''le loro''')<br>
+(''after the noun; also used before a noun denoting a close family member''): '''loro''' ''m'' (''same in feminine and plural forms'')
+
+#[[their]]
+#:''i loro figli'' - their children<!--masculine plural example before noun-->
+#:''le loro macchine'' - their cars<!--feminine plural example before noun-->
+#:''casa loro'' - their house<!--feminine singular example after noun-->
+#:''loro padre'' - their father<!--masculine singular example before close family member-->
+#(''often capitalised'') [[your]] (''polite plural form'')
+#:''i Loro figli'' - your children<!--masculine plural example before noun-->
+#:''le Loro macchine'' - your cars<!--feminine plural example before noun-->
+#:''casa Loro'' - your house<!--feminine singular example after noun-->
+#:''Loro padre'' - your father<!--masculine singular example before close family member-->
 
 ===Pronoun===
-'''Loro'''
+'''il loro''' ''m'' (''f'' '''la loro''', ''m plural'' '''i loro''', ''f plural'' '''le loro''')
 
-# (''plural of [[Lei]]'') [[you]] (polite)
+#[[theirs]]
+#:''Sono i loro'' - They are theirs.
+#(''often capitalised'') [[your]] (''polite plural form'')
+#:''Sono i Loro'' - They are yours.
 
-===Adjective===
-'''loro'''
-
-# [[their]]
+===See also===
+*[[mio]]
+*[[nostro]]
+*[[suo]]
+*[[tuo]]
+*[[vostro]]
 
 [[gl:Loro]]
