--- a/wiki/fungi.wikitext
+++ b/wiki/fungi.wikitext
@@ -1,12 +1,21 @@
 ==English==
+===Etymology===
+Latin ''fungus'' mushroom
 ===Proper noun===
+{{wikipedia}}
 '''Fungi'''
-#see [[Fungi]]
-----
-==Latin==
-===Noun===
-'''fungi'''  (''genitive'' and ''locative'' ''singular'', ''nominative'' and ''vocative'' ''plural'')
-#[[Fungus]], [[mushroom]]
-===Verb===
-'''fungi'''  (''passive'')
-#to [[perform]] or [[execute]]
+#a [[taxonomic]] [[kingdom]], within [[domain]] [[Eukaryota]] - the [[mushroom]]s and [[fungus]]es - over 100,000 [[species]] of [[organism]]s that are similar to [[plant]]s but do not contain [[chlorophyll]]
+===Related terms===
+{{wikispecies}}
+*kingdoms
+**[[Animalia]]
+**[[Plantae]]
+**[[Protista]]
+*[[phyla]]
+**[[Ascomycota]]
+**[[Basidiomycota]]
+**[[Chytridiomycota]]
+**[[Zygomycota]]
+**[[Glomeromycota]]
+===See also===
+*[[fungi]]
