[[protista]] moved to [[Protista]]: uppercase <protista#173439>

--- a/wiki/Protista.wikitext
+++ b/wiki/Protista.wikitext
@@ -1,17 +1,1 @@
-==English==
-===Etymology===
-Latin ''?
-===Proper noun===
-{{wikipedia}}
-'''Protista'''
-#a [[taxonomic]] [[kingdom]], within [[domain]] [[Eukaryota]] - a [[diverse]] [[group]] of [[organism]]s comprising 45 [[phyla]]; they are mostly [[single]] [[cellular]], and include some [[Algae]], the [[Protozoa]], the [[slime mould]]s and the [[water mould]]s
-===Related terms===
-{{wikispecies}}
-*kingdoms
-**[[Animalia]]
-**[[Plantae]]
-**[[Fungi]]
-*[[phyla]]
-**[[Protozoa]]
-**many others
-<!--- this lot need sorting out -->
+#redirect [[Protista]]
