--- a/wiki/he.wikitext
+++ b/wiki/he.wikitext
@@ -2,7 +2,8 @@
 ===[[:Category:Symbols|Symbol]]===
 '''he'''
 #[[linguistics]]/[[computing]]: [[ISO]] 639-1 [[2002]] [[code]] for [[Hebrew]]
-
+===See also===
+*[[He]]
 ----
 
 ==English==
