uppercase version <He#132005>

--- a/wiki/he.wikitext
+++ b/wiki/he.wikitext
@@ -1,134 +1,6 @@
 ==[[Translingual]]==
 ===[[:Category:Symbols|Symbol]]===
-'''he'''
-#[[linguistics]]/[[computing]]: [[ISO]] 639-1 [[2002]] [[code]] for [[Hebrew]]
+'''He'''
+#(''chemistry'') symbol for [[helium]]
 ===See also===
-*[[He]]
-----
-
-==English==
-===Etymology===
-From Old English '''[[hē]]''' < Proto-Germanic '''[[*hiz]]''' < Proto-Germanic base '''[[*khi-]]''' < Proto-Indo-European '''[[*ki-]]''' (this, here).
-
-===Pronunciation===
-*hē, /hiː/, /hi:/
-*:[[Rhymes:English:-hiː|Rhymes: -hiː]]
-
-===Personal pronoun===
-'''he'''<br>
-The third person singular, masculine, nominative case. (''Accusative'': [[him]],  ''reflexive'': [[himself]], ''possessive adjective and noun'': [[his]]. ''See'' [[Wiktionary:Inflection Templates]] for other personal pronouns.) 
-
-#Referring to a male other; himself.
-#That (when referring to a man). Bob-he of Poughkeepsie.
-#Referring to another whose gender is unknown (with animals this includes dogs, rodents; see [[she]])
-#:'''Note:''' ''This usage is considered [[sexist]] by some.  Compare'' '''[[he/she]]''', '''[[s/he]]''' ''and'' '''[[they]]'''.
-
-====Translations====
-*Arabic: [[هو|هُوَ]] (húwa)
-*Bulgarian: [[той]] (toj)
-*Mandarin Chinese: [[他]] (tā)
-*Minnan Chinese: [[伊]] (i)
-*Hakka Chinese: [[佢]] (kì)
-*Cantonese Chinese: [[佢]] (Yale: keui5)
-*[[Cree]]: [[wiya]] (''both male and female'')
-*Dutch: [[hij]]
-*[[Dyirbal]]: (''no third-person pronoun'')
-*[[Esperanto]]: [[li]]
-*[[Fijian]]: [[koya]] (''both male and female'')
-*Finnish: [[hän]] (''both male and female'')
-*French: [[il]] (1,2)
-*[[Frisian]]: [[hy]]
-*German: [[er]]
-*Greek: [[αυτός]] (avtós)
-*[[Guaraní]]: [[ahẽ]] (''both male and female'')
-*[[Hausa]]: [[shíi]] (''independent form'')
-*Hawaiian: [[ia]] (''both male and female'')
-*Hungarian: [[ő]] (''both male and female'')
-*[[Ido]]: [[il]], [[ilu]]
-*Icelandic: [[hann]]
-*Indonesian: [[dia]] / [[ia]] (''both male and female'')
-*[[Interlingua]]: [[ille]]
-*Irish: [[sé]] ''conjunctive'', [[é]] ''disjunctive''
-*Italian: [[lui#Italian|lui]], [[egli]]
-*:'''Note:''' ''Usually omitted, except for emphasis or to avoid confusion.''
-*Japanese: [[彼]] ([[かれ]], káre)
-*[[Kurdish]]: [[ew]] (''both male and female'')
-*Latin: [[is]]
-*Norwegian: [[han]]
-*[[Ojibwe]]: [[wiin]] (''both male and female'')
-*[[Persian]]: [[او]] (u) (''both male and female'')
-*Polish: [[on]]
-*Portuguese: [[ele]]
-*[[Quechua]]: [[pay#Quechua|pay]] (''both male and female'')
-*Romanian: [[el]]
-*Russian: [[он]] (on)
-*Scottish Gaelic: [[e]] ''non-emphatic'', [[esan]] ''emphatic''
-*Slovak: [[on]]
-*Spanish: [[él]]
-*Swahili: [[yeye]] (''both male and female'')
-*Swedish: [[han]]
-*[[Tagalog]]: [[niya]] (''ng form''), [[kaniya]] (''sa form''), [[siya]] (''unmarked form'') (''all both male and female'')
-*[[Tok Pisin]]: [[em]]
-*[[Tupinambá]]: [[a'e]] (''both male and female'')
-*Turkish: [[o#Turkish|o]] (''both male and female'')
-*Vietnamese: [[ông ấy]], [[nó]], [[anh]], [[anh ấy]]
-*[[!Xũ]]: [[ha#!Xũ|ha]] (''both male and female'')
-*[[Yorùbá]]: [[ó]], [[á]] (''both male and female'')
-===See also===
-*[[He]]
-----
-
-===Pronunciation===
-* [[w:IPA|IPA]]: /heɪ:/
-* [[w:SAMPA|SAMPA]]: /he:/
-====Noun====
-'''he'''
-# The fifth letter of the [[Hebrew]] alphabet, [[&#1492;]].
-
-----
-
-==Dutch==
-===Interjection===
-'''he!'''
-
-# said when surprised or when objecting to something
-
-===Translations===
-*English: [[huh]]!, [[hey]]!
-*Portuguese: [[epa]]!, [[opa]]!
-*Romanian: [[hei]]!, [[hopa]]!
-
-----
-
-==Finnish==
-===Personal pronoun===
-'''he''' (''stem'' '''hei-''')
-
-#[[they]] (''only of people'')
-
-====Variant forms====
-*(''dialectal'') [[het#Finnish|het]]
-*(''dialectal'') [[hyö#Finnish|hyö]]
-*(''colloquial'') [[ne#Finnish|ne]]
-
-====Declension====
-The stem is invariant and the suffixes regular, except in the genitive, where the form is ''heidän''. The [[comitative]] and [[instructive]] cases don't exist, and the [[abessive]] is hardly used.
-
-====Usage====
-Usually can't be omitted, despite the verb showing also the person and number.
-[[Category:Finnish pronouns]]
-----
-
-==Japanese [[romaji]]==
-'''he''' ([[へ]])
-
-===Noun===
-#[[屁]]: [[fart]]
-
-[[Category:English third person pronouns]]
-
-[[ja:he]]
-[[pl:He]]
-[[sv:he]]
-[[category:symbols]]
-[[Category:100 English basic words]]
+*[[he]]
