fmt; vi/vt for fr <lire#40452>

--- a/wiki/lire.wikitext
+++ b/wiki/lire.wikitext
@@ -2,15 +2,19 @@
 ===Noun===
 '''lire'''
 
-#plural of [[lira]]
+#Plural of ''[[lira]]'''.
 
 ----
-
 ==French==
-===Verb===
+===Transitive verb===
 '''lire'''
 
-# to [[read]]
+#to [[read]]
+
+===Intransitive verb===
+'''lire'''
+
+#to [[read]]
 
 ===Related terms===
 *[[lisible]]
@@ -18,9 +22,9 @@
 ----
 ==Italian==
 ===Noun===
-'''lire''' ''f pl''
+'''lire''' ''f plural''
 
-#plural of [[lira]]
+#Plural of '''[[lira#Italian|lira]]'''.
 
 [[et:Lire]]
 [[es:lire]]
