fmt; +extra it trans <lira#40496>

--- a/wiki/lira.wikitext
+++ b/wiki/lira.wikitext
@@ -1,17 +1,18 @@
 ==English==
 ===Noun===
 {{wikipedia}}
-'''lira''' (''plural:'' [[lire]])
+'''lira''' (''plural'' '''[[lire]]''')
 
-#A [[basic]] [[unit]] of [[currency]] in [[Turkey]].
-#A [[former]] currency of [[Italy]], [[Malta]], [[San Marino]] and the [[Vatican City]]; superseded by the [[euro]].
+#The [[basic]] [[unit of currency]] in [[Turkey]].
+#The [[former]] [[currency]] of [[Italy]], [[Malta]], [[San Marino]] and the [[Vatican City]], [[supersede]]d by the [[euro]].
 
 ----
 ==Italian==
 ===Noun===
-'''lira''' ''f'' (''plural:'' [[lire]])
+'''lira''' ''f'' (''plural'' [[lire]])
 
 #lira
+#[[lyre]]
 
 [[gl:Lira]]
 [[pl:Lira]]
