--- a/wiki/h.wikitext
+++ b/wiki/h.wikitext
@@ -1,35 +1,7 @@
-==Letter==
-'''H''', '''h'''
-
-#The eighth letter of the [[Appendix:English alphabet|English alphabet]], preceded by [[G]] and followed by [[I]], and representing /h/.
-#A symbol of the [[IPA]], representing a [[voiceless]] [[glottal]] [[fricative]].
-===Other Forms===
-*With [[circumflex]]: [[ĥ]]
-*With stroke: [[ħ]]
-*With [[caron]]: [[ȟ]]
-*With hook: [[ɦ]]
-*With dot above: [[ḣ]]
-*With dot below: [[ḥ]]
-*With [[diaeresis]]: [[ḧ]]
-*With [[cedilla]]: [[ḩ]]
-*With [[breve]] below: [[ḫ]]
-===See Also===
-*[[Ƕ]] ([[hwair]])
-*[[ɧ]] ([[heng]] with hook)
-[[Category:Latin letters]]
-----
-
-===Noun===
-
-#The eighth letter of the [[English]] alphabet ([[aitch]]).
-
-[[Category:Symbols]]
-#{{Physics}} symbol for a [[henry]], a unit for measurement of electrical [[inductance]]
-#([[slang]]) term for [[heroin]].
+==Translingual==
+===Symbol===
+'''H'''
+#{{chemistry}} symbol for [[hydrogen]]
 ===See also===
-*[[H]] (upper case)
-===Homographs===
-*[[Η]] (Greek [[eta]])
-*[[Н]] (Cyrillic en)
-
-[[pl:h]]
+*[[h]]
+[[Category:Symbols]]
