lowercase version <li#30523>

--- a/wiki/li.wikitext
+++ b/wiki/li.wikitext
@@ -1,1 +1,50 @@
-#redirect [[li]]
+==English==
+===Noun===
+'''li''' (''plural'' '''li''') <!--this is correct: the plural is "li", the same as the singular-->
+
+#A [[Chinese]] [[unit]] of [[distance]], approximately equal to 576 [[metre]]s or about one-[[third]] of a [[mile]].
+
+====Translations====
+*Chinese: [[里]]
+*Dutch: li
+*French: li
+===See also===
+*[[Li]]
+----
+==Dutch==
+===Noun===
+'''li'''
+
+#li (''Chinese unit of distance'')
+
+----
+==[[Esperanto]]==
+===Pronoun===
+'''li'''
+
+#[[he]]
+
+----
+==French==
+===Noun===
+'''li''' ''m''
+
+#li (''Chinese unit of distance'')
+
+----
+==Italian==
+===Homophones===
+*[[lì]]
+
+===Pronoun===
+'''li'''
+
+#[[them]]
+
+====Related terms====
+*[[gli]]
+*[[i#Italian|i]]
+*[[le#Italian|le]]
+*[[loro]]
+
+[[pl:li]]
