--- a/wiki/be.wikitext
+++ b/wiki/be.wikitext
@@ -1,1 +1,200 @@
-#redirect [[be]]
+== Balinese ==
+'''be'''
+
+# [[fish]]
+# [[meat]], [[fish]], [[tofu]], [[egg]] (everything that is eaten with rice exept vegetables)
+
+[[Category:Balinese language]]
+----
+
+==English==
+===Etymology===
+Old English ''[[beon]]''. Be, been come from the root "become", am, is, are from the root "exist", was, were from the root "stay".
+
+===Pronunciation===
+*{{audio|en-us-be.ogg|Audio (US)}}
+
+===Conjugation===
+<table border=1>
+<tr><th>  <th>Present<br>indicative<th>Past<br>indicative
+<th>Present<br>subjunctive<th>Past<br>subjunctive</tr>
+<tr><td>I</td><td>am</td><td>was</td><td>be</td><td>were</td>
+<tr><td>thou (''obsolete'')</td><td>art</td><td>wast</td><td>be</td><td>wert</td>
+<tr><td>he/she/it</td><td>is</td><td>was</td><td>be</td><td>were</td>
+<tr><td>we</td><td>are</td><td>were</td><td>be</td><td>were</td>
+<tr><td>you</td><td>are</td><td>were</td><td>be</td><td>were</td>
+<tr><td>they</td><td>are</td><td>were</td><td>be</td><td>were</td>
+</table>
+''Infinitive:'' '''to be'''<br/>
+''Past participle:'' '''been'''<br/>
+''Present participle:'' '''being'''<br/>
+''Imperative:'' '''be'''
+
+===Verb===
+====Intransitive Verb====
+'''to be'''
+<!-- I've commented this next out because it's really no different from any other verb.  You use "going ''infinitive''" or "will ''stem of infinitive''" for future, present for present, past or past participle for past.  In fact, the statement given is misleading: ''is'', ''am'' and ''are'' are all present tense, ''was'' and ''were'' are both past, and there may be other quibbles. -->
+<!-- '''Be''' is ordinarily used in the sense of a [[future]] event or transaction that will or has not yet taken place, while "''[[is]]''" is typically used for something that is happening now or otherwise used in the [[present tense]], and "''[[was]]''" or ''"[[been]]"'' is used for an event that did happen or is referenced in the [[past tense]].  -->
+
+# To [[occupy]] a [[place]] <!-- cf. Spanish estar vs. ser -->
+#:''The cat is in the bag, it will still '''be''' in the bag tomorrow.''
+# To [[occur]], to take place
+#: ''When and where is the test?  It will '''be''' tomorrow, in room 5.''
+# To [[exist]] 
+#: ''To '''be''', or not to '''be''', that is the question.'' &mdash; Shakespeare, ''Hamlet''
+
+====Copular verb====
+'''to be'''
+
+<!-- Probably need some mention of metaphor here -->
+# Indicates that the subject and object are the same.
+#: ''Two plus two is four.'' or ''Two plus two are four.''
+#: ''Ignorance is bliss.''
+# Indicates that the subject plays the role of the object.
+#: ''François Mitterrand was president of France from 1981 to 1995'' <!-- Won't have to change this when Chirac leaves office -->
+# Connects a noun to an adjective describing it.
+#: ''The sky is blue.''
+# Indicates that the subject has the qualities described by a noun or noun phrase. <!-- not quite right? -->
+#: ''The sky is a deep blue today.''
+#: ''The street was a confusion of vendors and shoppers.''
+
+====Auxiliary verb====
+'''to be'''
+
+# Used to form the passive voice.
+#:''The dog was drowned in the pond,''
+#:i.e. someone killed the dog, as opposed to ''The dog drowned in the pond,'' where the dog died accidentially.
+#:''The staff meeting will be held next Monday at 1:00.''
+# Used to form the continuous forms of the several tenses.
+#:''The woman is walking.''
+#:''For how long had you been waiting before the bus came?''
+# Used to form the subjunctive mood.
+#:''Be she more patient.''
+
+====Translations====
+'''Caution''' ''This verb is fraught with irregularities of both form and usage in many languages.  Strict literal translations should be viewed with suspicion.''
+{| border=0 width=100%
+|-
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--left column-->
+*[[Breton]]: [[bezañ]]
+*Bulgarian: [[съм]]
+*[[Catalan]]: [[ser]], [[estar]]
+*Chinese: [[是]] (shì), [[有]], [[在]], [[係]] (hai6) ([[Cantonese]])
+*Danish: [[være]], [[have]]
+*Dutch: [[zijn]], [[wezen]] (archaic, used in certain idioms and expressions)
+*[[Ekspreso]]: [[esen]]
+*[[Esperanto]]: [[esti]], [[okazi]] (''intransitive verb'' 2), [[ekzisti]] (''intransitive verb'' 3)
+*Estonian: [[olema]]
+*[[Faroese]]: [[vera]]
+*Finnish: [[olla]]
+*French: [[être]]
+*German: [[sein]]
+*Greek: [[είμαι]]
+*Hindi: [[होना]]
+|}
+| width=1% |
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--right column-->
+*[[Interlingua]]: [[esser]], [[ser]] 
+*Irish: [[bí]]
+*Italian: [[essere]]
+*Japanese:
+** (''auxiliary'', ''copula'') [[だ]] (da, ''informal''), [[です]] (desu, ''formal'')
+** (''existence'') [[有る]] (ある, aru, ''inanimate''); [[居る]] (いる, iru, ''animate'')
+*Korean: [[있다]] (it-da)
+*Latin: [[esse]] (''usu. cited by its 1st p. sng. form'' [[sum]])
+*Macedonian: [[сум]]
+*Manx: [[#Manx|be]]
+*Norwegian: [[være]]
+*Polish: [[by&#263;]]
+*Portuguese: ''intransitive'' '''1''' [[ser]], [[existir]], '''2''' [[estar]]; ''copular'' '''1~3''' [[ser]]; ''auxiliary'' '''1''' [[ser]] (with passive voice), '''2''' [[estar]] (with active voice)
+*Romanian: [[fi]]
+*Russian: [[быть]] (1-3), [[являться]] (2), [[жить]] (3)
+*Spanish: [[ser]], [[estar]] (''note'' : ''ser'' and ''estar'' are not employed in the same cases)
+*Swedish: [[vara]]
+|}
+|}
+
+[[Category:Behaviour]]
+[[Category:English auxiliary verbs]]
+===See also===
+*[[Be]]
+----
+
+==German==
+===Prefix===
+'''be-'''
+
+[[Category:German language]]
+----
+
+==Hungarian==
+===[[Coverb]]===
+'''be-''', '''be'''
+
+# [[in]], [[into]]
+#:'''''Be'''sz&aacute;lltam a kocsiba.''
+
+[[Category:Hungarian language]]
+----
+
+==Latin==
+===Alternative spellings===
+[[bee]]
+===interjection===
+'''be'''
+
+# "baa", sound made by sheep
+
+[[Category:Latin language]]
+----
+== Lithuanian ==
+=== Particle ===
+'''be'''
+
+# (shows absence of smth) [[without]]
+# [[besides]]; [[but]], [[except]]
+
+[[Category:Lithuanian language]]
+----
+
+==Manx==
+===Verb===
+'''be'''
+#to '''be'''
+
+[[Category:Manx language]]
+
+----
+
+==Swedish==
+===Verb===
+'''be'''
+
+{| border="1"
+|--
+|present tense || '''be''' ([[bedja]])
+|--
+|past tense || [[bad]]
+|--
+|past participle || [[bett]]
+|--
+|present particible || [[bedjande]]
+|--
+|}
+
+
+# [[ask]] for, request someone else to do something
+# to [[pray]]
+# to [[beg]], to plead with someone for help or for a favor.
+
+[[Category:Swedish language]]
+[[Category:100 English basic words]]
+
+[[es:be]]
+[[it:be]]
+[[ja:be]]
+[[pl:Be]]
