/* Proper noun */ <Бразилиа#104542>

--- a/wiki/%D0%91%D1%80%D0%B0%D0%B7%D0%B8%D0%BB%D0%B8%D0%B0.wikitext
+++ b/wiki/%D0%91%D1%80%D0%B0%D0%B7%D0%B8%D0%BB%D0%B8%D0%B0.wikitext
@@ -3,7 +3,7 @@
 ===Proper noun===
 '''Бразилиа''' (Brazília) ''f''
 
-#[[Brazilia]] ''(city)''
+#[[Brasilia]] ''(city)''
 
 ===See also===
 *[[Бразилия]] (Brazil)
