--- a/wiki/b.wikitext
+++ b/wiki/b.wikitext
@@ -1,1 +1,37 @@
-#redirect [[b]]
+==Letter==
+'''B''' '''b'''
+
+#The second letter of the [[English]] [[alphabet]], preceded by [[A]] and followed by [[C]], and representing /b/. (''See [[appendix:English alphabet]]'')
+#A symbol of the [[IPA]], representing a [[voiced]] [[bilabial]] [[stop]].
+===Other Forms===
+*With stroke: [[ƀ]]
+*With hook: [[ɓ]]
+*With topbar: [[ƃ]]
+*Tone Six: [[ƅ]]
+*With dot above: [[ḃ]]
+*With dot below: [[ḅ]]
+*With line below: [[ḇ]]
+===See Also===
+*[[B]] (upper case)
+*[[Β]] ([[beta]])
+*[[В]] ([[ve]])
+[[Category:Latin letters]]
+----
+
+===Noun===
+
+#The second letter of the [[English]] alphabet.
+#A [[blood type]] that has a specific antigen that aggravates the immune response in people with type [[A]] antigen in their blood.  They can receive blood from type B or type [[O]], but cannot receive blood from [[AB]] or [[A]].
+
+[[de:B]]
+[[es:b]]
+[[eu:B]]
+[[fr:B]]
+[[gl:B]]
+[[ia:B]]
+[[la:B]]
+[[ja:B]]
+[[pl:B]]
+[[pt:B]]
+[[fi:B]]
+[[ur:B]]
