--- a/wiki/mother.wikitext
+++ b/wiki/mother.wikitext
@@ -1,1 +1,158 @@
-#redirect [[mother]]
+==English==
+
+===Etymology===
+From Middle English [[moder]], mother, from Old English [[modor|mōdor]]. Cognates include Greek [[μετερ]], Latin [[mater]], German [[Mutter]], Russian [[мать]] (mat')
+
+===Noun===
+'''mother''' (''plural'' '''mothers''')
+
+#A female [[parent]].
+<!--"mother of all ..." and "motherfucker" definitions are given separately below because they have different origins-->
+
+====Synonyms====
+*(''parent'') ''See'' [[WikiSaurus:mother]]
+
+====Translations====
+
+'''female parent'''
+{| border=0  width=100%
+|-
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--left column-->
+*[[Aragonese]]: [[mai]] ''f''
+*[[Bengali/Bangla]]: [[ma, amma]] ''f''
+*[[Breton]]: [[mamm]] ''f'' -où
+*Bulgarian: [[майка]] ''f''
+*[[Catalan]]: [[mare#Catalan|mare]] ''f''
+*Chinese: [[妈妈]] (mā mā)
+*Czech: [[matka]] ''f'' <!-- presumably these are for "mamma", etc: máti, máma, maminka, mamička, mamka, mutra-->
+*Dutch: [[moeder]] ''f''
+*[[Esperanto]]: [[patrino]] ''f''
+*Finnish: [[äiti]]
+*French: [[mère]] ''f''
+*[[Georgian]]: [[დედა]] (deda)
+*German: [[Mutter#German|Mutter]] ''f''
+*Greek: [[Μητέρα]] ''f''
+*[[Guaraní]]: [[sy]]
+*Hebrew: [[אם|אֵם]] ''f''
+*Hungarian: [[anya]]
+*Icelandic: [[móðir]]<!--this belongs in the Icelandic entry: [[mæður]] ''plural''-->
+*[[Ido]]: [[matro]]
+*Indonesian: [[ibu]], [[bunda]], [[ibunda]]
+*[[Interlingua]]: [[matre]]
+*Irish: [[máthair]]
+|}
+| width=1% |
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--right column-->
+*Italian: [[madre]] ''f''
+*Japanese: [[お母さん]] ([[おかあさん]], okāsan), [[母]] ([[はは]], haha)
+*Korean: [[어머니]] (eomeoni)
+*Kurdish: [[dayik]], [[mak]]
+*Latin: [[mater#Latin|mater]]
+*Malay: [[emak]]
+*Central Sierra [[Miwok]]: [[ʔytáˑ-]]
+*Navajo: [[amá]]
+*Persian: [[مادر|مادَر]] (mādær)
+*Polish: [[matka]] ''f''
+*Portuguese: [[mãe]] ''f''
+*Romanian: [[mamă]] ''f''
+*Russian: [[мать]]
+*Slovak:  [[matka]] ''f''
+<!-- These are translations of "mamma", etc, not of "mother"
+(officially,documents), [[mať]] (''nonstandard, archaic, rare''), [[mama]] (home, usual form), [[mamka]] ('little mother'-- >nice/beloved mother,used by children)  , mamička ('little little mother',used by children),mami !! (vocative,short form,often used by children)-->
+*Slovene: [[mati]] ''f''
+*Spanish: [[madre]] ''f''
+*[[Tok Pisin]]: [[mama]]
+*[[Tupinambá]]: [[sy]]
+*Turkish: [[anne]]
+*Ukrainian: [[мати]] ''f''
+|}
+|}
+
+====Derived terms====
+*[[motherfucker]]
+*[[mother-in-law]]
+*[[Mother Earth]]
+*[[Mothering Sunday]]
+*[[Mothers' Day]]
+*[[biological mother]]
+*[[birth mother]]
+*[[foster mother]]
+*[[grandmother]], [[great-grandmother]]
+*[[stepmother]]
+*[[surrogate mother]]
+----
+===Verb===
+'''mother'''
+# Treat as a mother would be expected to treat her child, nurture.
+
+===Etymology===
+Arabic
+----
+===Noun===
+'''mother''' (''plural'' '''mothers''')
+
+#Something that is the greatest or most significant of its kind.
+#:''the '''mother''' of all battles'' &mdash; [[w:George W. Bush|George W. Bush]]
+
+====Translations====
+
+'''something that is the greatest of its kind'''
+{| border=0  width=100%
+|-
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--Put translations for languages from A to I here-->
+|}
+| width=1% |
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--Put translations for languages from J to Z here-->
+|}
+|}
+
+===Etymology===
+Shortened from [[motherfucker]]
+----
+===Noun===
+'''mother''' (''plural'' '''mothers''')
+
+====Variant spellings====
+*[[mutha]]
+
+#(''coarse slang'') Short form of [[motherfucker]].
+
+====Synonyms====
+*[[MF]], [[mofo]], [[motherfucker]], [[mutha]]
+
+====Translations====
+''See'' [[motherfucker]]
+
+=====Translations to be checked=====
+<!--Remove this section once all of the translations below have been moved into the tables above.-->
+
+The translations below need to be checked by native speakers and inserted into the appropriate table(s) above.  The numbering is unreliable.
+
+*Hebrew: [[אֵם]] ''f'' (2)
+----
+===Transitive verb===
+'''to mother''' ('''mothering''', '''mothered''', '''mothered''')
+
+#To act as a mother toward; to take [[care]] of, especially excessively so.
+
+====Translations====
+*German: [[bemuttern]]
+
+[[Category:1000 English basic words]]
+
+[[de:mother]]
+[[it:mother]]
+[[la:Mother]]
+[[nl:mother]]
+[[pl:Mother]]
+[[fi:Mother]]
+[[sv:mother]]
+[[uk:Mother]]
