--- a/wiki/scarecrow.wikitext
+++ b/wiki/scarecrow.wikitext
@@ -11,6 +11,7 @@
 *German: [[Vogelscheuche]] ''f''
 *Italian: [[spaventapasseri]] ''m sing''
 *[[Maricopa]]: [[chiyer thʼer]]
+*{{no}}: [[:no:fugleskremsel|fugleskremsel]]
 *[[O'odham]]: [[vaṣai gakidagĭ odham]]
 *Spanish: [[espantapájaros]] ''m sing''
 *{{sv}}: [[fågelskrämma]] ''c''
