--- a/wiki/otic.wikitext
+++ b/wiki/otic.wikitext
@@ -33,6 +33,6 @@ Greek ''[[ōtikos]]'' ("of the [[ear]]") from ''[[ous]]'' ("ear").
 *[[otosis]]
 
 ====Translations====
-
+*Polish: [[uszny]]
 
 [[pl:otic]]
