--- a/wiki/labia.wikitext
+++ b/wiki/labia.wikitext
@@ -1,1 +1,37 @@
-#redirect [[labia]]
+==English==
+===Pronunciation===
+*[[w:AHD|AHD]]: lā'bē-ə
+
+===Etymology===
+Latin
+
+===Plural noun===
+'''labia'''
+
+# folds of tissue at the opening of the [[vulva]].
+
+====Related terms====
+*[[labia majora]]
+*[[labia minora]]
+*[[labial]]
+
+====Translations====
+*Dutch: schaamlip (-en)
+*German: Labia ''pl''
+*Spanish: [[labias]] ''f pl''
+
+----
+
+==German==
+===Noun===
+'''Labia''' ''pl''
+
+# labia.
+
+----
+
+==Latin==
+===Noun===
+'''labia''' ''n pl''
+
+# plural of [[labium]], [[lips]].
