--- a/wiki/job.wikitext
+++ b/wiki/job.wikitext
@@ -1,1 +1,71 @@
-#redirect [[job]]
+==English==
+===Pronunciation===
+*jŏb, /dʒɒb/, /<tt>dZQb</tt>/
+*:[[Rhymes:English:-ɒb|Rhymes: -ɒb]]
+
+===Noun===
+'''job''' (plural: [[jobs]])
+
+#A [[task]].
+#:''I've got a job for you - could you wash the dishes?''
+#An economic role for which a person is paid.
+#:''His job is as a plumber.''
+
+====Derived terms====
+*[[blowjob]]
+*[[bob-a-job]]
+*[[jobless]]
+*[[job of work]]
+*[[job-seeker]]
+*[[nose job]]
+*[[paint job]]
+*[[toe job]]
+
+====Translations====
+
+'''task'''
+{| border=0  width=100%
+|-
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--Put translations for languages from A to I here-->
+|}
+| width=1% |
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--Put translations for languages from J to Z here-->
+|}
+|}
+
+'''economic role for which a person is paid'''
+{| border=0  width=100%
+|-
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--Put translations for languages from A to I here-->
+*French: [[travail]] ''m''
+*Italian: [[lavoro]] ''m''
+|}
+| width=1% |
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--Put translations for languages from J to Z here-->
+*Spanish: [[trabajo]] ''m''
+|}
+|}
+
+=====Translations to be checked=====
+<!--Remove this section once all of the translations below have been moved into the tables above.-->
+{{checktrans}}
+*[[Catalan]]: [[treball]]
+*Finnish: [[työ]]
+*Welsh: [[swydd]]
+
+===See also===
+*[[Job]]<!--proper noun-->
+*[[employment]]
+*[[work]]
+*[[labour]]
+
+[[fr:job]]
+[[it:job]]
