--- a/wiki/Maori.wikitext
+++ b/wiki/Maori.wikitext
@@ -1,57 +1,1 @@
-{{wikipedia}}
-==English==
-===Pronunciation===
-*/ˈmaʊri/, /"maUri/
-
-===Etymology===
-*From ''Maori'' language meaning aborigine, fresh, native, normal, ordinary, or plain.
-
-===Alternative spellings===
-*'''Māori''': Prefered usage in Māori text. Macrons recommended by Māori Language Commission to indicate long vowel sounds in Māori words. Macrons also used in New Zealand English texts with Māori related content.
-*'''Mäori''': Alternative usage in Māori text where macrons not available.
-*'''Maaori''': Alternative usage in Māori text with limited character sets.
-
-===Adjective===
-'''Maori'''
-
-# Of, from, or pertaining to the Maori. 
-
-====Translations====
-*Bulgarian: [[маорски]] ''m'', [[маорска]] ''f'', [[маорско]] ''n'', [[маорски]] ''pl''
-*Chinese: [[毛利的]]<!-- isn't "的" a separate particle - not part of a word? -->
-*Dutch: Maori
-*Finnish: [[maori-]]
-*French: [[maori]] ''m'', [[maorie]] ''f''
-*Maori: [[Māori]]
-*[[Persian]]: [[مائوري]] (Mā'ori)
-*Portuguese: maori
-
-===Noun===
-'''Maori''' ([[Maoris]])<!-- is Maori also its own plural sometimes? -->
-
-# Language of the Maori.
-# Member of a people of [[New Zealand]].
-
-====Translations====
-*Bulgarian: [[маори]] ''pl'' (2)
-*Chinese: [[毛利语]](1), [[毛利人]](2)
-*Dutch: Maori ''n'' (1), ''m/f'' (2)
-*Finnish: maori (1,2)
-*French: [[maori]] ''m'' (1), [[Maori]] ''m'' (2), [[Maorie]] ''f'' (2)
-*Maori: [[Māori]]
-*[[Persian]]: [[مائوري]] (Mā'ori)
-*Portuguese: maori (1,2)
-*Russian: [[маори]] (máori) ''m/f'' (2)
-*Swedish: [[maori]] (1,2)
-
-====See also====
-*''[[te reo]]''
-*[[Wiktionary:Maori_index|Index of maori words]]
-
-===External links===
-{{interwiktionary|code=mi}}
-*[http://www.learningmedia.co.nz/nz/online/ngata/ Ngata Dictionary (new URL 2005 - it now has macrons, but it is initially unable to recognise them in a Maori-English search)] <!-- Robin wrote to Learning Media about it a second time on 25 May -->
-*[http://translator.kedri.info ngā aho whakamāori-ā-tuhi (English and Maori Word Translator)] formerly from the Knowledge Engineering Laboratory of University of Otāgo, now based in Auckland 
-*[http://www.cs.waikato.ac.nz/~tetaka/kupurorohiko.htm He Kupu Rorohiko] - Computer-related terms, by Te Taka Keegan - over 350 Maori-English words and phrases, followed by English-Maori
-*[http://www.websters-online-dictionary.org/definition/Maori-english/ Maori - English Dictionary]: from [http://www.websters-online-dictionary.org/ Webster's Dictionary] - the Rosetta Edition.
-[[Category:Languages]]
+#redirect [[Maori]]
