--- a/wiki/breastfeed.wikitext
+++ b/wiki/breastfeed.wikitext
@@ -3,4 +3,4 @@
 # To [[feed]] a baby milk via the [[mammal]]ary [[gland]]s of a woman's [[teet]]
 ====Translations====
 *French; [[allaiter]]
-*{{pt}}: [[:pt:amamentar|amamentar]]
+*Portuguese: [[:pt:amamentar|amamentar]]
