--- a/wiki/breastfeed.wikitext
+++ b/wiki/breastfeed.wikitext
@@ -2,5 +2,5 @@
 ===Verb===
 # To [[feed]] a baby milk via the [[mammal]]ary [[gland]]s of a woman's [[teet]]
 ====Translations====
-*French: [[fr:allaiter|allaiter]]
+*French: [[:fr:allaiter|allaiter]]
 *Portuguese: [[:pt:amamentar|amamentar]]
