[[fula]] moved to [[Fula]]: uppercase <fula#173484>

--- a/wiki/Fula.wikitext
+++ b/wiki/Fula.wikitext
@@ -1,10 +1,1 @@
-==English==
-===Proper noun===
-# A West-[[African]] [[people]]
-# [[language]] [[spoken]] in [[West Africa]]
-====Translations====
-*French: [[peul]]
-*Fula: [[fulfulda]]
-==See Also==
-# [[:Category:Fula language]]
-[[Category:Languages]]
+#redirect [[Fula]]
