def, der, see also, pronunciation, Wikipedia link <Job#135761>

--- a/wiki/job.wikitext
+++ b/wiki/job.wikitext
@@ -5,7 +5,10 @@
 ===Proper noun===
 '''Job'''
 
-#An [[Old Testament]] character [[renown]]ed for his [[patience]].
+#An [[Old Testament]] character.
+
+===Derived terms===
+*[[Job's comforter]]
 
 ===See also===
 *[[job]]
