--- a/wiki/Afar.wikitext
+++ b/wiki/Afar.wikitext
@@ -1,15 +1,1 @@
-==English==
-===Etymology===
-Pref. a- (for on or of) + far.
-
-===Pronunciation===
-IPA: [[WEAE]] /ʌˈfaɹ/
-
-===Adverb===
-At, to, or from a great distance; far away; &mdash; often used  with from preceding, or off following; as, he was seen from  afar; I saw him afar off.
-
-===Noun===
-{{Interwiktionary|code=aa}}
-A language spoken in [[Ethiopia]] and [[Djibouti]].
-
-[[gl:Afar]]
+#redirect [[Afar]]
